# LAT_MFLike

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  mflike-plik-lowLE.yaml  mflike-plik.yaml  mflike.py  params_calib.yaml  params_cosmo.yaml  plik.yaml  prior_SZ.yaml  pyproject.toml  setup.cfg  setup.py  test_plikmflike.py  tosacc.py
.github/actions/check-skip/: action.yml
.github/workflows/: codestyle.yml  notebooks.yml  testing.yml  wheels.yml
.github/workfows/: unit_tests.yml
binder/: requirements.txt
docs/: requirements.txt
docs/source/: conf.py  foreground.rst  index.rst  mflike.rst  theoryforge.rst
docs/source/_static/css/: custom.css
docs/source/notebooks/: common.py  tutorial_fisher.ipynb  tutorial_foregrounds.ipynb  tutorial_loading.ipynb  tutorial_logp_value.ipynb  tutorial_residuals.ipynb
examples/: mflike_example.yaml
mflike/: EE.yaml  Foreground.yaml  MFLike.yaml  MFLike_EE.yaml  MFLike_TE.yaml  MFLike_TT.yaml  MFLike_TTTEEE.yaml  TE.yaml  TEEE.yaml  TT.yaml  TTEE.yaml  TTTE.yaml  TTTEEE.yaml  _MFLike.yaml  __init__.py  _version.py  calib.yaml  calib_E.yaml  calib_T.yaml  calib_cov.txt  calib_mean.txt  fg_EE.yaml  fg_TE.yaml  fg_TT.yaml  foreground.py  foreground.yaml  mflike.py  mflike.yaml  mflike_common.yaml  params_common.yaml  theoryforge.py  theoryforge_MFLike.py  toy_likelihood.yaml
mflike/tests/: example_cov.txt  test_mflike.py
mflike_utils/: utils.py
notebooks/: mflike_tutorial.ipynb
plikmflike/: PlikMFLike.yaml  __init__.py  plikmflike.py
plikmflike/fgspectra/: __init__.py  cross.py  frequency.py  model.py  power.py
sacc_utils/: write_sacc_act.py
scripts/: generate_beams_w_bandpass_shifts.py
tests/: test_mflike.yaml  test_mflike_sacc.yaml
