[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mflike"
dynamic = ["version"]
authors = [
  { name = "Simons Observatory Collaboration Power Spectrum Group aka so_ps 1 & 2" },
]
description = "SO LAT multi-frequency likelihood for cobaya"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["likelihood", "SO LAT", "cosmology"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"
dependencies = [
  "fgspectra>=1.3.0",
  "syslibrary>=0.2.0",
  "cobaya>=3.5.4",
  "sacc>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "nbval", "camb", "healpy", "ruff", "pre-commit"]
notebook = ["jupyter", "camb", "seaborn", "latex2mathml"]
all = ["mflike[test]", "mflike[notebook]"]

[project.urls]
Homepage = "https://github.com/simonsobs/LAT_MFLike"
Documentation = "https://lat-mflike.readthedocs.io"
Source = "https://github.com/simonsobs/LAT_MFLike"
Tracker = "https://github.com/simonsobs/LAT_MFLike/issues"
Licensing = "https://github.com/simonsobs/LAT_MFLike/blob/master/LICENCE"

[tool.setuptools_scm]
version_file = "mflike/_version.py"

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.packages.find]
exclude = ["binder", "docs"]

[tool.ruff.lint]
select = ["E713", "E703", "E714", "E741", "E10", "E11", "E20", "E22", "E23", "E25", "E262", "E27", "E301", "E302", "E304", "E9", "F405", "F406", "F5", "F6", "F7", "F8", "E501", "W191", "F401", "W1", "W292", "W293", "W3"]
extend-select = ["I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"docs/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
exclude = ["build", ".eggs", "cobaya_packages", "*.ipynb"]
line-length = 100

[tool.coverage.run]
omit = ["mflike/tests/*", "mflike/_version.py"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    "except ModuleNotFoundError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    "except AttributeError",
    "raise LoggedError",
    # Don't complain about script hooks
    "def main\\(.*\\):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]
